[package]
name = "parami-node-executor"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate node implementation in Rust."
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
parami-node-primitives = { version = "3.0.0", path = "../primitives" }
parami-node-runtime = { version = "3.0.0", path = "../runtime" }
sc-executor = "0.9.0"
sp-core = "3.0.0"
sp-io = "3.0.0"
sp-state-machine = "0.9.0"
sp-trie = "3.0.0"
trie-root = "0.16.0"
frame-benchmarking = "3.0.0"

[dev-dependencies]
criterion = "0.3.0"
node-testing = "2.0.0"
frame-support = "3.0.0"
frame-system = "3.0.0"
pallet-balances = "3.0.0"
pallet-contracts = "3.0.0"
pallet-grandpa = "3.0.0"
pallet-im-online = "3.0.0"
pallet-indices = "3.0.0"
pallet-session = "3.0.0"
pallet-timestamp = "3.0.0"
pallet-transaction-payment = "3.0.0"
pallet-treasury = "3.0.0"
sp-application-crypto = "3.0.0"
sp-runtime = "3.0.0"
sp-externalities = "0.9.0"
substrate-test-client = { version = "2.0.1", git = "https://github.com/paritytech/substrate.git", tag="v3.0.0" }
wabt = "0.10.0"

[features]
wasmtime = [
    "sc-executor/wasmtime",
]
wasmi-errno = [
	"sc-executor/wasmi-errno",
]
stress-test = []

[[bench]]
name = "bench"
harness = false
