[package]
name = "parami-node-rpc"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpc-core = "15.1.0"

parami-node-primitives = { version = "3.0.0", path = "../primitives" }
parami-node-runtime = { version = "3.0.0", path = "../runtime" }

sp-runtime = "3.0.0"
sp-api = "3.0.0"
sp-consensus-babe = "0.9.0"
sp-consensus = "0.9.0"
sp-blockchain = "3.0.0"
sp-block-builder = "3.0.0"
sp-transaction-pool = "3.0.0"
sp-keystore = "0.9.0"
pallet-contracts-rpc = "3.0.0"
pallet-transaction-payment-rpc = "3.0.0"
substrate-frame-rpc-system = "3.0.0"
sc-client-api = "3.0.0"
sc-chain-spec = "3.0.0"
sc-consensus-babe = "0.9.0"
sc-consensus-babe-rpc = "0.9.0"
sc-keystore = "3.0.0"
sc-consensus-epochs = "0.9.0"
sc-finality-grandpa = "0.9.0"
sc-finality-grandpa-rpc = "0.9.0"
sc-rpc-api = "0.9.0"
sc-rpc = "3.0.0"