[package]
name = "parami-node-runtime"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
integer-sqrt = { version = "0.1.2" }
serde = { version = "1.0.102", features = ["derive"], optional = true }
hex = { version = "0.4.0", default-features = false }
num-bigint-dig = { version = "0.6.0", default-features = false}
num-traits = { version = "0.2.4", default-features = false}
static_assertions = "1.1.0"

# primitives
sp-authority-discovery = { version = "3.0.0", default-features = false, path = "../substrate/primitives/authority-discovery" }
sp-consensus-babe = { version = "0.9.0", default-features = false, path = "../substrate/primitives/consensus/babe" }
sp-block-builder = { version = "3.0.0", path = "../substrate/primitives/block-builder", default-features = false }
sp-inherents = { version = "3.0.0", default-features = false, path = "../substrate/primitives/inherents" }
parami-node-primitives = { version = "3.0.0", default-features = false, path = "../primitives" }
sp-offchain = { version = "3.0.0", default-features = false, path = "../substrate/primitives/offchain" }
sp-core = { version = "3.0.0", default-features = false, path = "../substrate/primitives/core" }
sp-std = { version = "3.0.0", default-features = false, path = "../substrate/primitives/std" }
sp-api = { version = "3.0.0", default-features = false, path = "../substrate/primitives/api" }
sp-runtime = { version = "3.0.0", default-features = false, path = "../substrate/primitives/runtime" }
sp-staking = { version = "3.0.0", default-features = false, path = "../substrate/primitives/staking" }
sp-keyring = { version = "3.0.0", optional = true, path = "../substrate/primitives/keyring" }
sp-session = { version = "3.0.0", default-features = false, path = "../substrate/primitives/session" }
sp-transaction-pool = { version = "3.0.0", default-features = false, path = "../substrate/primitives/transaction-pool" }
sp-version = { version = "3.0.0", default-features = false, path = "../substrate/primitives/version" }
sp-io = { version = "3.0.0", path = "../substrate/primitives/io", default-features = false }

# frame dependencies
frame-executive = { version = "3.0.0", default-features = false, path = "../substrate/frame/executive" }
frame-benchmarking = { version = "3.0.0", default-features = false, path = "../substrate/frame/benchmarking", optional = true }
frame-support = { version = "3.0.0", default-features = false, path = "../substrate/frame/support" }
frame-system = { version = "3.0.0", default-features = false, path = "../substrate/frame/system" }
frame-system-benchmarking = { version = "3.0.0", default-features = false, path = "../substrate/frame/system/benchmarking", optional = true }
frame-system-rpc-runtime-api = { version = "3.0.0", default-features = false, path = "../substrate/frame/system/rpc/runtime-api" }
pallet-authority-discovery = { version = "3.0.0", default-features = false, path = "../substrate/frame/authority-discovery" }
pallet-authorship = { version = "3.0.0", default-features = false, path = "../substrate/frame/authorship" }
pallet-babe = { version = "3.0.0", default-features = false, path = "../substrate/frame/babe" }
pallet-balances = { version = "3.0.0", default-features = false, path = "../substrate/frame/balances" }
pallet-collective = { version = "3.0.0", default-features = false, path = "../substrate/frame/collective" }
pallet-contracts = { version = "2.0.1", default-features = false, path = "../substrate/frame/contracts" }
pallet-contracts-primitives = { version = "2.0.1", default-features = false, path = "../substrate/frame/contracts/common" }
pallet-contracts-rpc-runtime-api = { version = "0.8.0", default-features = false, path = "../substrate/frame/contracts/rpc/runtime-api" }
pallet-democracy = { version = "3.0.0", default-features = false, path = "../substrate/frame/democracy" }
pallet-elections-phragmen = { version = "3.0.0", default-features = false, path = "../substrate/frame/elections-phragmen" }
# pallet-finality-tracker = { version = "3.0.0", default-features = false, path = "../substrate/frame/finality-tracker" }
pallet-grandpa = { version = "3.0.0", default-features = false, path = "../substrate/frame/grandpa" }
pallet-im-online = { version = "3.0.0", default-features = false, path = "../substrate/frame/im-online" }
pallet-indices = { version = "3.0.0", default-features = false, path = "../substrate/frame/indices" }
pallet-identity = { version = "3.0.0", default-features = false, path = "../substrate/frame/identity" }
pallet-membership = { version = "3.0.0", default-features = false, path = "../substrate/frame/membership" }
pallet-offences = { version = "3.0.0", default-features = false, path = "../substrate/frame/offences" }
pallet-offences-benchmarking = { version = "3.0.0", path = "../substrate/frame/offences/benchmarking", default-features = false, optional = true }
pallet-randomness-collective-flip = { version = "3.0.0", default-features = false, path = "../substrate/frame/randomness-collective-flip" }
pallet-session = { version = "3.0.0", features = ["historical"], path = "../substrate/frame/session", default-features = false }
pallet-session-benchmarking = { version = "3.0.0", path = "../substrate/frame/session/benchmarking", default-features = false, optional = true }
pallet-staking = { version = "3.0.0", default-features = false, path = "../substrate/frame/staking" }
pallet-staking-reward-curve = { version = "3.0.0", default-features = false, path = "../substrate/frame/staking/reward-curve" }
pallet-scheduler = { version = "3.0.0", default-features = false, path = "../substrate/frame/scheduler" }
pallet-sudo = { version = "3.0.0", default-features = false, path = "../substrate/frame/sudo" }
pallet-timestamp = { version = "3.0.0", default-features = false, path = "../substrate/frame/timestamp" }
pallet-treasury = { version = "3.0.0", default-features = false, path = "../substrate/frame/treasury" }
pallet-utility = { version = "3.0.0", default-features = false, path = "../substrate/frame/utility" }
pallet-transaction-payment = { version = "3.0.0", default-features = false, path = "../substrate/frame/transaction-payment" }
pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0", default-features = false, path = "../substrate/frame/transaction-payment/rpc/runtime-api" }
pallet-bounties = { version = "3.0.0", default-features = false, path = "../substrate/frame/bounties" }

# inner dependencies
did = { path = "../pallets/did", default-features = false }
pallet-nft = { path = "../pallets/nft", default-features = false }
ads = { path = "../pallets/ads", default-features = false }
parami-bridge = { package = "parami-bridge", path = "../pallets/bridge", default-features = false }
#prices = { path = "../pallets/prices", default-features = false }
#utilities = { path = "../pallets/utilities", default-features = false }

[build-dependencies]
substrate-wasm-builder = '3.0.0'

[dev-dependencies]
#sp-io = { version = "3.0.0", path = "../substrate/primitives/io" }

[features]
default = ["std"]
std = [
	"sp-authority-discovery/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"sp-consensus-babe/std",
	"pallet-babe/std",
	"pallet-balances/std",
	"sp-block-builder/std",
	"codec/std",
	"pallet-collective/std",
	"pallet-contracts/std",
	"pallet-contracts-primitives/std",
	"pallet-contracts-rpc-runtime-api/std",
	"pallet-democracy/std",
	"pallet-elections-phragmen/std",
	"frame-executive/std",
	# "pallet-finality-tracker/std",
	"pallet-grandpa/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"sp-inherents/std",
	"pallet-membership/std",
	"pallet-identity/std",
	"parami-node-primitives/std",
	"sp-offchain/std",
	"pallet-offences/std",
	"sp-core/std",
	"pallet-randomness-collective-flip/std",
	"sp-std/std",
	"serde/std",
	"pallet-session/std",
	#"simple-json/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-staking/std",
	"sp-keyring",
	"sp-session/std",
	"pallet-sudo/std",
	"frame-support/std",
	"frame-benchmarking/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"sp-transaction-pool/std",
	"pallet-utility/std",
	"sp-version/std",
	"did/std",
	"ads/std",
	"parami-bridge/std",
	"pallet-nft/std"
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-democracy/runtime-benchmarks",
	"pallet-elections-phragmen/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"frame-system-benchmarking",
]
