[package]
name = "parami-node-runtime"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
integer-sqrt = { version = "0.1.2" }
serde = { version = "1.0.102", features = ["derive"], optional = true }
hex = { version = "0.4.0", default-features = false }
num-bigint-dig = { version = "0.6.0", default-features = false}
num-traits = { version = "0.2.4", default-features = false}
static_assertions = "1.1.0"

# primitives
sp-authority-discovery = { version = "3.0.0", default-features = false }
sp-consensus-babe = { version = "0.9.0", default-features = false }
sp-block-builder = { version = "3.0.0", default-features = false }
sp-inherents = { version = "3.0.0", default-features = false }
parami-node-primitives = { version = "3.0.0", default-features = false, path = "../primitives" }
sp-offchain = { version = "3.0.0", default-features = false }
sp-core = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-api = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-staking = { version = "3.0.0", default-features = false }
sp-keyring = { version = "3.0.0", optional = true }
sp-session = { version = "3.0.0", default-features = false }
sp-transaction-pool = { version = "3.0.0", default-features = false }
sp-version = { version = "3.0.0", default-features = false }
sp-io = { version = "3.0.0", default-features = false }

# frame dependencies
frame-executive = { version = "3.0.0", default-features = false }
frame-benchmarking = { version = "3.0.0", default-features = false, optional = true }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
frame-system-benchmarking = { version = "3.0.0", default-features = false, optional = true }
frame-system-rpc-runtime-api = { version = "3.0.0", default-features = false }
pallet-authority-discovery = { version = "3.0.0", default-features = false }
pallet-authorship = { version = "3.0.0", default-features = false }
pallet-babe = { version = "3.0.0", default-features = false }
pallet-balances = { version = "3.0.0", default-features = false }
pallet-collective = { version = "3.0.0", default-features = false }
pallet-contracts = { version = "3.0.0", default-features = false }
pallet-contracts-primitives = { version = "3.0.0", default-features = false }
pallet-contracts-rpc-runtime-api = { version = "3.0.0", default-features = false }
pallet-democracy = { version = "3.0.0", default-features = false }
pallet-elections-phragmen = { version = "3.0.0", default-features = false }
# pallet-finality-tracker = { version = "3.0.0", default-features = false }
pallet-grandpa = { version = "3.0.0", default-features = false }
pallet-im-online = { version = "3.0.0", default-features = false }
pallet-indices = { version = "3.0.0", default-features = false }
pallet-identity = { version = "3.0.0", default-features = false }
pallet-membership = { version = "3.0.0", default-features = false }
pallet-offences = { version = "3.0.0", default-features = false }
pallet-offences-benchmarking = { version = "3.0.0", default-features = false, optional = true }
pallet-randomness-collective-flip = { version = "3.0.0", default-features = false }
pallet-session = { version = "3.0.0", features = ["historical"], default-features = false }
pallet-session-benchmarking = { version = "3.0.0", default-features = false, optional = true }
pallet-staking = { version = "3.0.0", default-features = false }
pallet-staking-reward-curve = { version = "3.0.0", default-features = false }
pallet-scheduler = { version = "3.0.0", default-features = false }
pallet-sudo = { version = "3.0.0", default-features = false }
pallet-timestamp = { version = "3.0.0", default-features = false }
pallet-treasury = { version = "3.0.0", default-features = false }
pallet-utility = { version = "3.0.0", default-features = false }
pallet-transaction-payment = { version = "3.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0", default-features = false }
pallet-bounties = { version = "3.0.0", default-features = false }

# inner dependencies
did = { path = "../pallets/did", default-features = false }
ads = { path = "../pallets/ads", default-features = false }
parami-bridge = { package = "parami-bridge", path = "../pallets/bridge", default-features = false }
parami-nft = { package = "parami-nft", path = "../pallets/nft", default-features = false }
#prices = { path = "../pallets/prices", default-features = false }
#utilities = { path = "../pallets/utilities", default-features = false }

[build-dependencies]
substrate-wasm-builder = '3.0.0'

[dev-dependencies]
#sp-io = { version = "3.0.0" }

[features]
default = ["std"]
std = [
	"sp-authority-discovery/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"sp-consensus-babe/std",
	"pallet-babe/std",
	"pallet-balances/std",
	"sp-block-builder/std",
	"codec/std",
	"pallet-collective/std",
	"pallet-contracts/std",
	"pallet-contracts-primitives/std",
	"pallet-contracts-rpc-runtime-api/std",
	"pallet-democracy/std",
	"pallet-elections-phragmen/std",
	"frame-executive/std",
	# "pallet-finality-tracker/std",
	"pallet-grandpa/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"sp-inherents/std",
	"pallet-membership/std",
	"pallet-identity/std",
	"parami-node-primitives/std",
	"sp-offchain/std",
	"pallet-offences/std",
	"sp-core/std",
	"pallet-randomness-collective-flip/std",
	"sp-std/std",
	"serde/std",
	"pallet-session/std",
	#"simple-json/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-staking/std",
	"sp-keyring",
	"sp-session/std",
	"pallet-sudo/std",
	"frame-support/std",
	"frame-benchmarking/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"sp-transaction-pool/std",
	"pallet-utility/std",
	"sp-version/std",
	"did/std",
	"ads/std",
	"parami-bridge/std",
    "parami-nft/std"
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-democracy/runtime-benchmarks",
	"pallet-elections-phragmen/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"frame-system-benchmarking",
]
