[package]
name = "parami-nft"
version = "0.1.0"
authors = ["raytlty <alexmao930918@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.111", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-core = { version = "3.0.0", default-features = false, path = "../../substrate/primitives/core" }
sp-std = { version = "3.0.0", default-features = false, path = "../../substrate/primitives/std" }
sp-runtime = { version = "3.0.0", default-features = false, path = "../../substrate/primitives/runtime" }
frame-support = { version = "3.0.0", default-features = false, path = "../../substrate/frame/support" }
frame-system = { version = "3.0.0", default-features = false, path = "../../substrate/frame/system" }
pallet-proxy = { version = "3.0.0", default-features = false, path = "../../substrate/frame/proxy" }
pallet-timestamp = { version = "3.0.0", default-features = false, path = "../../substrate/frame/timestamp" }

[dev-dependencies]
sp-io = { version = "3.0.0", path = "../../substrate/primitives/io" }
pallet-balances = { version = "3.0.0", path = "../../substrate/frame/balances" }
pallet-utility = { version = "3.0.0", path = "../../substrate/frame/utility" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-proxy/std",
	"pallet-timestamp/std",
]
