[package]
name = "tokens"
description = "Fungible tokens module that implements `MultiCurrency` trait."
license = "Apache-2.0"
version = "0.1.0"
authors = ["parami Developers <baozhongmail@yeah.net>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.102",  optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
pallet-traits = {  package="traits",   path = "../traits", version = "0.1.0", default-features = false }

sp-core = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-io = { version = "3.0.0", default-features = false }

# frame dependencies
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }

[dev-dependencies]
# sp-io = { version = "3.0.0", default-features = false }
 pallet-treasury ={ version = "3.0.0", default-features = false }
# Patch doesn't work as `pallet-elections-phragmen` is now 4.0.0 version. Revert `rev` to `rococo-v1` branch after
# other `rococo-v1` dependencies upgraded.
 pallet-elections-phragmen = { version = "3.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"codec/std",
	"sp-std/std",
	"frame-support/std",
	"sp-runtime/std",
	"frame-system/std",
	"serde"
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
